--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -2,10 +2,11 @@
 	<div class="container">
 		<div class="header__row">
 			<div class="logo">АвтоМир</div>
-			<nav class="header__nav nav">
-				<ul class="nav__list">
-					<li><a href="#!">Главная</a></li>
-					<li><a href="#!">Документация</a></li>
+			<nav class="header__nav">
+				<ul class="header__nav-list">
+					<li><a href="#!">Католог</a></li>
+					<li><a href="#!">О нас</a></li>
+					<li><a href="#!">Контакты</a></li>
 				</ul>
 			</nav>
 		</div>
