--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,5 +1,7 @@
 <footer class="footer">
 	<div class="container">
-
+		<h2 class="footer__copyright">
+			&copy; АвтоМир
+		</h2>
 	</div>
 </footer>
