created status for cards

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,8 @@
 							<h2 class="card__price"> &#36;54.000</h2>
 						</div>
 						<a href="#!" class="form-link">Подать заявку</a>
+						<h2 class="status-available" hidden>Доступен</h2>
+						<h2 class="status-unavailable" hidden>Продан</h2>
 					</div>
 					<div class="card">
 						<img src="./../img/cars/nissan.jpg" alt="NISSAN" class="card__img">
@@ -38,6 +40,8 @@
 							<h2 class="card__price"> &#36;44.500</h2>
 						</div>
 						<a href="#!" class="form-link">Подать заявку</a>
+						<h2 class="status-available" hidden>Доступен</h2>
+						<h2 class="status-unavailable" hidden>Продан</h2>
 					</div>
 					<div class="card">
 						<img src="./../img/cars/toyota.jpg" alt="TOYOTA" class="card__img">
@@ -47,6 +51,8 @@
 							<h2 class="card__price"> &#36;26.000</h2>
 						</div>
 						<a href="#!" class="form-link">Подать заявку</a>
+						<h2 class="status-available" hidden>Доступен</h2>
+						<h2 class="status-unavailable" hidden>Продан</h2>
 					</div>
 				</div>
 			</div>
