year of issue moved to a separate block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,8 +24,9 @@
 					<div class="card">
 						<img src="./../img/cars/bmw.jpg" alt="BMW" class="card__img">
 						<div class="card__desc">
-							<h2 class="card__title">2021 X1</h2>
+							<h2 class="card__title">X1</h2>
 							<h3 class="card__model">BMW</h3>
+							<h3 class="card__year">2021</h3>
 							<h2 class="card__price"> &#36;54.000</h2>
 						</div>
 						<a href="#!" class="form-link">Подать заявку</a>
@@ -35,8 +36,9 @@
 					<div class="card">
 						<img src="./../img/cars/nissan.jpg" alt="NISSAN" class="card__img">
 						<div class="card__desc">
-							<h2 class="card__title">2023 Ariya</h2>
+							<h2 class="card__title">Ariya</h2>
 							<h3 class="card__model">NISSAN</h3>
+							<h3 class="card__year">2023</h3>
 							<h2 class="card__price"> &#36;44.500</h2>
 						</div>
 						<a href="#!" class="form-link">Подать заявку</a>
@@ -46,8 +48,9 @@
 					<div class="card">
 						<img src="./../img/cars/toyota.jpg" alt="TOYOTA" class="card__img">
 						<div class="card__desc">
-							<h2 class="card__title">2022 Corolla</h2>
+							<h2 class="card__title">Corolla</h2>
 							<h3 class="card__model">TOYOTA</h3>
+							<h3 class="card__year">2022</h3>
 							<h2 class="card__price"> &#36;26.000</h2>
 						</div>
 						<a href="#!" class="form-link">Подать заявку</a>
