--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,7 +29,7 @@
 							<h3 class="card__year">2021</h3>
 							<h2 class="card__price"> &#36;54.000</h2>
 						</div>
-						<a href="#!" class="form-link">Подать заявку</a>
+						<a href="#!" class="form-link">Оформить заявку</a>
 						<h2 class="status-available" hidden>Доступен</h2>
 						<h2 class="status-unavailable" hidden>Продан</h2>
 					</div>
@@ -41,7 +41,7 @@
 							<h3 class="card__year">2023</h3>
 							<h2 class="card__price"> &#36;44.500</h2>
 						</div>
-						<a href="#!" class="form-link">Подать заявку</a>
+						<a href="#!" class="form-link">Оформить заявку</a>
 						<h2 class="status-available" hidden>Доступен</h2>
 						<h2 class="status-unavailable" hidden>Продан</h2>
 					</div>
@@ -53,13 +53,15 @@
 							<h3 class="card__year">2022</h3>
 							<h2 class="card__price"> &#36;26.000</h2>
 						</div>
-						<a href="#!" class="form-link">Подать заявку</a>
+						<a href="#!" class="form-link">Оформить заявку</a>
 						<h2 class="status-available" hidden>Доступен</h2>
 						<h2 class="status-unavailable" hidden>Продан</h2>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		@@include('blocks/form-section.html')
 	</main>
 	@@include('blocks/footer.html')
 	<script src="./js/index.bundle.js"></script>
